// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFilterButton does not render a badge or count if numFilters is not passed 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-label="aria-label"
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props badgeColor renders 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props grow can be turned off 1`] = `
<div
  class="euiFilterButton__wrapper css-103lkl6-wrapper-hasToggle-noGrow"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle-noGrow"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props iconType and iconSide renders 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content-hasIcon"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
      <span
        color="inherit"
        data-euiicon-type="user"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props isDisabled renders 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-isDisabled-euiButtonGroupButton-compressed-empty-disabled-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    disabled=""
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props isSelected renders 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-pressed="true"
    class="euiButtonGroupButton euiButtonGroupButton-isSelected euiFilterButton euiFilterButton-isSelected euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-fill-text-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props numActiveFilters and hasActiveFilters renders 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-hasActiveFilters euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-hasActiveFilters-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text euiFilterButton__text-hasNotification emotion-euiFilterButton__text-hasNotification"
      />
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="5 active filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-accent-euiFilterButton__notification-badgeContent"
          role="marquee"
        >
          5
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props numFilters renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1l6f9kt-wrapper-hasNotification-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-hasNotification euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text euiFilterButton__text-hasNotification emotion-euiFilterButton__text-hasNotification"
      />
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="5 available filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-subdued-euiFilterButton__notification-badgeContent"
          role="marquee"
        >
          5
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props type renders 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props withNext renders 1`] = `
<div
  class="euiFilterButton__wrapper css-m710hk-wrapper-withNext-hasToggle"
>
  <button
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle"
    data-test-subj="filter-button_generated-id"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton renders 1`] = `
<div
  class="euiFilterButton__wrapper css-6k246k-wrapper-hasToggle"
>
  <button
    aria-label="aria-label"
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text emotion-euiFilterButton__text"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton renders zero properly 1`] = `
<div
  class="euiFilterButton__wrapper css-1l6f9kt-wrapper-hasNotification-hasToggle"
>
  <button
    aria-label="aria-label"
    aria-pressed="false"
    class="euiButtonGroupButton euiFilterButton euiFilterButton-hasNotification euiFilterButton-isToggle testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-s-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
    >
      <span
        class="euiFilterButton__text euiFilterButton__text-hasNotification emotion-euiFilterButton__text-hasNotification"
      />
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="0 available filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-subdued-euiFilterButton__notification-badgeContent"
          role="marquee"
        >
          0
        </span>
      </span>
    </span>
  </button>
</div>
`;
